--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body id="home">
   <header class="header-bg">
     <div class="header container">
       <a href="./">
@@ -160,7 +160,7 @@
       <img src="./img/bikcraft.svg" alt="Bikcraft">
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">Contato</h3>
-        <ul class="cor-5 font-2-m">
+        <ul class="font-2-m cor-5">
           <li><a href="tel:+552199999999">+55 21 9999-9999</a></li>
           <li><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
           <li>Rua Ali Perto, 42 - Botafogo</li>
