--- a/bicicletas.html
+++ b/bicicletas.html
@@ -106,7 +106,7 @@
       </div>
       <div class="bicicletas-conteudo">
         <h2 class="font-1-xl">Nebula Cosmic</h2>
-        <p class="font-2-s cor-8">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+        <p class="font-2-s cor-8">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <ul class="font-1-m cor-8">
           <li>
             <img src="./img/icones/eletrica.svg" alt="">
